--- a/app/src/main/res/layout/activity_display_experiments.xml
+++ b/app/src/main/res/layout/activity_display_experiments.xml
@@ -24,8 +24,9 @@
         android:id="@+id/text_view_theme_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/btn_theme_toggle"
+        style="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintTop_toBottomOf="@id/title_display_experiments"
+        app:layout_constraintStart_toEndOf="@id/btn_theme_toggle"
         android:text="@string/theme_light_mode"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
