--- a/app/src/main/res/layout/activity_display_experiments.xml
+++ b/app/src/main/res/layout/activity_display_experiments.xml
@@ -12,21 +12,29 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <Button
-        android:id="@+id/btn_theme_toggle"
-        app:layout_constraintTop_toBottomOf="@id/title_display_experiments"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btn_toggle_theme"
-        android:onClick="toggleTheme"/>
-    <TextView
-        android:id="@+id/text_view_theme_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.AppCompat.Medium"
+android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/title_display_experiments"
-        app:layout_constraintStart_toEndOf="@id/btn_theme_toggle"
-        android:text="@string/theme_light_mode"/>
+        app:layout_constraintStart_toStartOf="parent">
+        <Button
+            android:id="@+id/btn_theme_toggle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_toggle_theme"
+            android:onClick="toggleTheme"/>
+        <TextView
+            android:id="@+id/text_view_theme_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/theme_light_mode"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
