--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,11 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_display"
         android:onClick="launchDisplayExpsActivity"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_custom_views"
+        android:onClick="launchCustomViewsActivity"/>
 </LinearLayout>
