--- a/app/src/main/res/layout/activity_display_experiments.xml
+++ b/app/src/main/res/layout/activity_display_experiments.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="8dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
