--- a/app/src/main/res/layout/colorstrips.xml
+++ b/app/src/main/res/layout/colorstrips.xml
@@ -9,8 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+            <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="100dp"
             android:background="@color/black">
             <TextView
@@ -18,10 +23,28 @@
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:text="One victim lives the tragedy"/>
+            </LinearLayout>
+            <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="100dp"
+            android:background="@color/red">
+            <TextView
+                android:padding="5dp"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:text="One victim lives the tragedy"/>
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+            <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="100dp"
             android:background="@color/light_blue_400">
             <TextView
@@ -29,10 +52,28 @@
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:text="One victim stops to stare"/>
+            </LinearLayout>
+            <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="100dp"
+            android:background="@color/green">
+            <TextView
+                android:padding="5dp"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:text="One victim stops to stare"/>
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+            <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="100dp"
             android:background="@color/red">
             <TextView
@@ -40,10 +81,28 @@
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:text="Still another walks on by"/>
+            </LinearLayout>
+            <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="100dp"
+            android:background="@color/black">
+            <TextView
+                android:padding="5dp"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:text="Still another walks on by"/>
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+            <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="100dp"
             android:background="@color/green">
             <TextView
@@ -51,10 +110,11 @@
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:text="Still another walks on by"/>
-        </LinearLayout>
-        <LinearLayout
+            </LinearLayout>
+            <LinearLayout
             android:orientation="vertical"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="100dp"
             android:background="@color/yellow">
             <TextView
@@ -62,6 +122,36 @@
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:text="Still another walks on by"/>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+            <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="100dp"
+            android:background="@color/yellow">
+            <TextView
+                android:padding="5dp"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:text="Still another walks on by"/>
+            </LinearLayout>
+            <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="100dp"
+            android:background="@color/light_blue_400">
+            <TextView
+                android:padding="5dp"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:text="Still another walks on by"/>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
